--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   realm: ^20.0.0
+  equatable: ^2.0.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/dummy_data/habitaciones.json
+    - assets/dummy_data/reservas.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
